.flux-cluster-reference/infrastructure/controllers/base/traefik/redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
spec:
  redirectScheme:
    permanent: true
    scheme: https
